# VibecodeApp

./: .gitignore  AGENTS.md  P13_P18_INDEPENDENT_COMPLETION_REVIEW.md  P18_POST_COMPLETION_REVIEW.md  PRD.json  README.md  VibecodeApp_plan_dalsich_kroku.md  gpt_PRD_audit.md  pyproject.toml  sonnet_PRD_audit.md
.docs/: VibecodeApp_architektonicka_mapa_repa.md
.ralphy/: config.yaml  progress.txt
.vibecode/: README.md  config.yml  project.yaml
docs/: ARCHITECTURE_MAP_PRD.md  ARCHITECTURE_MAP_STATUS.md  CONTROL_LAYER_FINAL_AUDIT.md  ContextBuild_deep_research.md  PRD_OBSERVABLE_RUN_MONITOR_FOLLOWUP_VALIDATION.md  PRD_P13_COMPLETION_AUDIT.md  PRD_TUI_PHASE1_PHASE2_VALIDATION.md  PRD_VIBECODE_ARCHITECTURE_MAP.md  QUALITY_IMPROVEMENT_PLAN.md  QUICKSTART.md  VISION.md
scripts/: patch_indexer.py  write_tests.py
tests/: __init__.py  test_integration.py  test_vibecode_active_project_fallback.py  test_vibecode_agent_provider.py  test_vibecode_agents_export.py  test_vibecode_architecture_templates.py  test_vibecode_check.py  test_vibecode_classifier.py  test_vibecode_cli.py  test_vibecode_code_intelligence.py  test_vibecode_config.py  test_vibecode_context_cards.py  test_vibecode_context_pack.py  test_vibecode_context_tui.py  test_vibecode_dashboard.py  test_vibecode_debug_cockpit.py  test_vibecode_dependency_map.py  test_vibecode_diff_summary.py  test_vibecode_e2e.py  test_vibecode_entrypoints.py  test_vibecode_events.py  test_vibecode_external_terminal.py  test_vibecode_fixture_repo.py  test_vibecode_full_workflow.py  test_vibecode_git_state.py  test_vibecode_guard.py  (+41 more)
(+174 files in other folders)
