[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vibecode"
version = "0.1.0"
description = "Local repository architecture map and context-pack CLI."
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
tui = ["textual>=0.47"]
mcp = ["mcp>=1.0"]
all = ["textual>=0.47", "mcp>=1.0"]

[project.scripts]
vibecode = "vibecode.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["tests/fixtures"]
